[gd_scene load_steps=33 format=2]

[ext_resource path="res://Assets/Enemies/Slime/attack/slime-attack-0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/Slime/move/slime-move-1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Slime/move/slime-move-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Slime/hurt/slime-hurt-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Slime/hurt/slime-hurt-3.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/Slime/attack/slime-attack-1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Slime/idle/slime-idle-1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/Slime/idle/slime-idle-0.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/Slime/idle/slime-idle-2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Enemies/Slime/hurt/slime-hurt-1.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemies/Slime/die/slime-die-0.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemies/Slime/attack/slime-attack-2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemies/Slime/hurt/slime-hurt-0.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemies/Slime/attack/slime-attack-3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemies/Slime/move/slime-move-0.png" type="Texture" id=15]
[ext_resource path="res://Assets/Enemies/Slime/die/slime-die-1.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemies/Slime/attack/slime-attack-4.png" type="Texture" id=17]
[ext_resource path="res://Assets/Enemies/Slime/idle/slime-idle-3.png" type="Texture" id=18]
[ext_resource path="res://Assets/Enemies/Slime/die/slime-die-3.png" type="Texture" id=19]
[ext_resource path="res://Assets/Enemies/Slime/die/slime-die-2.png" type="Texture" id=20]
[ext_resource path="res://Assets/Enemies/Slime/move/slime-move-2.png" type="Texture" id=21]
[ext_resource path="res://Scripts/E_Slime.gd" type="Script" id=22]
[ext_resource path="res://Assets/Enemies/Slime/fall/slime-fall_03.png" type="Texture" id=23]
[ext_resource path="res://Assets/Enemies/Slime/fall/slime-fall_04.png" type="Texture" id=24]
[ext_resource path="res://Assets/Enemies/Slime/fall/slime-fall_02.png" type="Texture" id=25]
[ext_resource path="res://Assets/Enemies/Slime/fall/slime-fall_01.png" type="Texture" id=26]
[ext_resource path="res://Prefabs/audio_manager.tscn" type="PackedScene" id=27]
[ext_resource path="res://Prefabs/Enemy_HUD.tscn" type="PackedScene" id=28]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 18 ) ],
"loop": true,
"name": "idle",
"speed": 8.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 16 ), ExtResource( 20 ), ExtResource( 19 ) ],
"loop": false,
"name": "die",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "fall",
"speed": 8.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "hurt",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 17 ) ],
"loop": false,
"name": "attack",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11, 7.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.5, 10 )

[node name="Slime" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 1096
script = ExtResource( 22 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -11 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[node name="attackreset_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="knockback_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="movestop_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="raycast_run1" type="RayCast2D" parent="."]
modulate = Color( 0.941176, 1, 0.419608, 1 )
position = Vector2( -11, -6 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 90 )

[node name="raycast_run2" type="RayCast2D" parent="."]
modulate = Color( 0.941176, 1, 0.419608, 1 )
position = Vector2( 11, -6 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 90 )

[node name="raycast_attack" type="RayCast2D" parent="."]
modulate = Color( 0.898039, 0, 0.823529, 1 )
position = Vector2( 0, -10 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 16 )

[node name="raycast_wall" type="RayCast2D" parent="."]
position = Vector2( 0, -2 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 16 )
collision_mask = 8

[node name="hitbox" type="Area2D" parent="." groups=["E_Hitbox"]]
position = Vector2( -1, -1 )
collision_layer = 128
collision_mask = 32

[node name="attack_hitbox" type="CollisionShape2D" parent="hitbox"]
modulate = Color( 0.51, 1, 0.550833, 1 )
position = Vector2( -14, -9 )
shape = SubResource( 3 )
disabled = true

[node name="hurtbox" type="Area2D" parent="." groups=["E_Hurtbox"]]
collision_layer = 256
collision_mask = 1088

[node name="hurtbox_collision" type="CollisionShape2D" parent="hurtbox"]
self_modulate = Color( 0.843137, 0, 0.545098, 0.364706 )
position = Vector2( -0.5, -10 )
shape = SubResource( 4 )

[node name="alpha_tween" type="Tween" parent="."]

[node name="audio_manager" parent="." instance=ExtResource( 27 )]

[node name="Enemy_HUD" parent="." instance=ExtResource( 28 )]
visible = false
margin_top = -32.0
margin_bottom = -32.0

[connection signal="animation_finished" from="sprite" to="." method="_on_sprite_animation_finished"]
[connection signal="timeout" from="attackreset_timer" to="." method="_on_attackreset_timer_timeout"]
[connection signal="timeout" from="knockback_timer" to="." method="_on_knockback_timer_timeout"]
[connection signal="timeout" from="movestop_timer" to="." method="_on_movestop_timer_timeout"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="tween_completed" from="alpha_tween" to="." method="_on_alpha_tween_tween_completed"]
[connection signal="timeout" from="Enemy_HUD/timer" to="." method="_on_timer_timeout"]

[editable path="Enemy_HUD"]
